--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: Create terraform plan
+name: Master Branch
 
 on:
   pull_request:
@@ -6,17 +6,11 @@ on:
       - master
 
 jobs:
-  Plan-Lambda-Function:
+  terraform:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository content
         uses: actions/checkout@v2
-
-      - name: Create lambda.zip
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt -t .
-          zip -r lambda.zip * -x "bin/*" requirements.txt setup.cfg
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
