--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,4 +28,7 @@ jobs:
 
       - name: Test Terraform Code
         run: go test s3_test.go
+        env:
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
         working-directory: ./terratest
