--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,6 +16,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.14.6
+          terraform_wrapper: false
 
       - name: Install Go
         uses: actions/setup-go@v2
